--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecomm-redesign",
+  "name": "deborahlms",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@next/font": "13.4.19",
+    "@reduxjs/toolkit": "^1.9.6",
+    "@tanstack/react-table": "^8.10.3",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.15",
+    "chart.js": "^4.4.0",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.4",
     "next": "13.4.19",
+    "postcss": "^8.4.28",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "react-slick": "^0.29.0",
+    "sass": "^1.66.1",
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
+    "@types/react-slick": "^0.23.10"
   }
 }
