--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.15",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "postcss": "^8.4.28",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
