--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
     "postcss": "^8.4.31",
+    "postcss-reporter": "^7.0.5",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
@@ -37,6 +39,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
-    "@types/react-slick": "^0.23.10"
+    "@types/react-datepicker": "^4.19.3",
+    "@types/react-slick": "^0.23.10",
+    "encoding": "^0.1.13"
   }
 }
